--- a/src/Components/Home/Bottom/Bottom.module.css
+++ b/src/Components/Home/Bottom/Bottom.module.css
@@ -22,6 +22,7 @@
 
 .lCol p {
   color: #063254;
+  text-align: center;
 }
 
 .rCol {
@@ -45,6 +46,13 @@
   margin-bottom: 1.5rem;
   text-align: center;
   width: 295px;
+}
+
+.rCol form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
 }
 
 .rCol input {
@@ -99,7 +107,7 @@
   flex-direction: column;
   height: 250px;
   justify-content: flex-start;
-  margin-top: 3rem;
+  margin-top: 4rem;
   width: 50%;
 }
 
@@ -117,7 +125,7 @@
   font-size: 29px;
   margin-bottom: 2rem;
   margin-top: 1rem;
-  width: 583px;
+  text-align: center;
 }
 
 @media (max-width: 480px) {
@@ -125,6 +133,7 @@
     height: auto;
     width: 100%;
   }
+
   .container {
     align-items: center;
     flex-direction: column;
@@ -132,9 +141,11 @@
     padding-top: 2.5rem;
     width: 90%;
   }
+
   .lCol {
     width: 100%;
   }
+
   .lCol p {
     font-size: 14px;
     width: 327px;
@@ -144,8 +155,13 @@
     margin-top: 2rem;
     width: 100%;
   }
+
   .rCol h3 {
     margin-bottom: 1rem;
+  }
+
+  .rCol button {
+    margin-top: 0.5rem;
   }
 
   .rCol input,
@@ -163,7 +179,9 @@
   .bottomDiv h1 {
     font-size: 18px;
     margin-top: 1.5rem;
+    text-align: center;
   }
+
   .bottomDiv::before {
     padding-top: 0;
     width: 90%;
